# SABC

./: .coveragerc  .env.dev  .env.example  .env.local-test  .env.local-test.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  CONTRIBUTING.md  CREDENTIAL_ROTATION_SUMMARY.md  DATABASE_MIGRATIONS.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_DIGITALOCEAN.md  Dockerfile  Dockerfile.prod  Dockerfile.tests  Dockerfile_mypy  Dockerfile_pylint  Dockerfile_pytest  EMAIL_SETUP.md  MCP_INTEGRATION_GUIDE.md  MIGRATION_PLAN.md  MONITORING.md  Makefile  POSTGRES_SETUP.md  PRODUCTION_READINESS_ROADMAP.md  QUICK_DEPLOYMENT_GUIDE_ARCHIVED_20251005.txt  QUICK_SECURITY_ACTIONS.md  README.md  ROSTER_POLICY.md  SCRIPTS_CLEANUP_SUMMARY.md  SECURITY.md  SESSION_MANAGEMENT_AUDIT.md  STAGING_ENVIRONMENT.md  TESTING.md  TESTING_TODO.md  TEST_README.md  (+69 more)
.devcontainer/: Dockerfile  devcontainer.json
.do/: app-staging.yaml  app.yaml
.github/: DEPLOYMENT_SETUP.md  dependabot.yml
alembic/: env.py
config/: staging.env.template
core/: __init__.py  auth_decorators.py  auth_helpers.py  config.py  correlation_middleware.py  csrf_middleware.py  database.py  db_helpers.py  db_schema.py  db_utils.py  deps.py  email_service.py  enums.py  filters.py  lakes.py  logging_config.py  providers.py  query_service.py  response_helpers.py  schemas.py  security_middleware.py  template_config.py  types.py  validators.py
deploy/: Dockerfile  db_vars.env  django_vars.env  docker-compose.yml  requirements.txt
docker/: Dockerfile  Dockerfile.tests  django_vars.env  gen_requirements.sh  requirements.txt
docs/: ACCOUNT_MERGE.md  API_REFERENCE.md  ARCHITECTURE.md  BROWSER_COMPATIBILITY.md  BROWSER_COMPATIBILITY_SUMMARY.md  BUGFIX_POLL_VOTING_RAMP_SELECTION.md  CODEBASE_ANALYSIS_SUMMARY.md  COMPONENTS.md  COVERAGE_ROADMAP_TO_80_PERCENT.md  CREDENTIAL_ROTATION_SUMMARY.md  CRUD_TEST_COVERAGE_PLAN.md  DATABASE_BACKUP_STRATEGY.md  DATABASE_OPTIMIZATIONS.md  DEBUG_MOBILE_VOTING.md  DEPLOYMENT.md  DEVELOPMENT.md  DUES_MANAGEMENT.md  E2E_TESTING.md  ENTERPRISE_IMPROVEMENTS.md  MIGRATIONS_GUIDE.md  MOBILE_TESTING_CHECKLIST.md  MODULAR_STRUCTURE.md  MONITORING.md  NIX_DEVELOPMENT_GUIDE.md  PERFORMANCE_IMPLEMENTATION_SUMMARY.md  PHASE_3_ARCHITECTURE_DOCUMENTATION.md  PRODUCTION_READINESS_ROADMAP.md  README.md  REFACTORING_PROGRESS.md  RUNBOOK.md  STAGING_DEPLOYMENT.md  STAGING_ENVIRONMENT.md  STAGING_ENVIRONMENT_SETUP.md  TESTING.md  TESTING_COVERAGE_REPORT.md  TESTING_QUICK_START.md  TOURNAMENT_RESULT_VIEWS.md  USER_GUIDE.md
routes/: __init__.py  admin_core.py  admin_events.py  admin_news.py  admin_polls.py  admin_tournaments.py  admin_users.py  api.py  auth.py  awards.py  calendar.py  dependencies.py  pages.py  password_reset.py  public.py  static.py  tournament_results.py  tournaments.py  tournaments_public.py  voting.py
sabc/: manage.py  requirements.txt  test_performance.py  urls.py  wsgi.py
scripts/: add_holidays.py  add_results_constraint.py  apply_migration.sh  (+42 more)
(+651 files in other folders)
